--- a/RV2015/prover.tex
+++ b/RV2015/prover.tex
@@ -9,8 +9,8 @@ the University of Iowa~\cite{kind}.
 To begin, we describe how safety properties are specified in Copilot. Using the
 ``synchronous observer'' approach~\cite{amast93}, properties \emph{about}
 Copilot programs are specified \emph{within} Copilot itself. In particular,
-properties are encoded with standard boolean streams; and Copilot streams are
-sufficient to encode past-time linear temporal logic~\cite{ptltl}. We bind a boolean stream
+properties are encoded with standard Boolean streams and Copilot streams are
+sufficient to encode past-time linear temporal logic~\cite{ptltl}. We bind a Boolean stream
 to a property name with the \texttt{prop} construct in the specification, where
 the specification has type \texttt{Spec}. 
 
