keywords drop and extern highlighted

--- a/RV2015/paper.tex
+++ b/RV2015/paper.tex
@@ -61,7 +61,7 @@
   keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
   keywordstyle=\color{blue},       % keyword style
   language=Octave,                 % the language of the code
-  morekeywords={where,then,let,data,assert,Word8,Word32,Word64,Bool,
+  morekeywords={where,then,drop,extern,let,data,assert,Word8,Word32,Word64,Bool,
     Stream,trigger,Spec},            % if you want to add more keywords to the set
   rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
   showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
