--- a/RV2015/paper.bib
+++ b/RV2015/paper.bib
@@ -1771,6 +1771,32 @@ month = {December}
   pages = 	 {175-205}
 }
 
+
+%------------------ Recent related MC embedded in PL -----------------
+@inproceedings{Torlak,
+ author = {{E}mina {T}orlak and  {R}astislav {B}odik},
+ title = {A Lightweight Symbolic Virtual Machine for Solver-aided Host Languages},
+ booktitle = {Proceedings of the 35th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+ series = {PLDI '14},
+ year = {2014},
+ pages = {530--541},
+ publisher = {ACM}
+} 
+
+
+
+@inproceedings{Uhler,
+ author = {{R}ichard {U}hler  and {N}irav {D}ave},
+ title = {Smten with Satisfiability-based Search},
+ booktitle = {Proceedings of the 2014 ACM International Conference on Object Oriented Programming Systems Languages \&\#38; Applications},
+ series = {OOPSLA '14},
+ year = {2014},
+ pages = {157--176},
+ publisher = {ACM}
+} 
+
+
+
 % --------- EDSL -----------
 
 @article{Gill:14:DSLs,
