added citations for two papers suggested by Reviewer3

--- a/RV2015/paper.bib
+++ b/RV2015/paper.bib
@@ -1788,7 +1788,7 @@ month = {December}
 @inproceedings{Uhler,
  author = {{R}ichard {U}hler  and {N}irav {D}ave},
  title = {Smten with Satisfiability-based Search},
- booktitle = {Proceedings of the 2014 ACM International Conference on Object Oriented Programming Systems Languages \&\#38; Applications},
+ booktitle = {Proceedings of the 2014 ACM International Conference on Object Oriented Programming Systems Languages \& Applications},
  series = {OOPSLA '14},
  year = {2014},
  pages = {157--176},
