--- a/RV2015/Structure.tex
+++ b/RV2015/Structure.tex
@@ -78,7 +78,7 @@ The {Cnub} format is aimed at approximating a copilot specification in a format 
   \cdots, x_n) = f(y_1, \cdots, y_n). $$ in the quantifier-free theory of
   uninterpreted function symbols, as provided by most \textsc{smt} solvers.
 
-\item Copilot extern variables are modelled by unconstrained streams. Particular precautions have to be taken to model accesses to external arrays in order to express the constraint that several requests to the same index inside a clock period must yield the same result.
+\item Copilot extern variables are modelled by unconstrained streams. Particular precautions have to be taken to model access to external arrays in order to express the constraint that several requests to the same index inside a clock period must yield the same result.
 
 \end{itemize}
 
