--- a/RV2015/intro.tex
+++ b/RV2015/intro.tex
@@ -5,14 +5,17 @@ verification challenges facing ultra-critical
 systems~\cite{pike-rv-11,rvRushby}.  As RV matures it will be employed to
 verify increasingly complex properties such as checking complex
 stability properties of a control system or ensuring that a critical
-system is fault-tolerant. RV may be a
-way to regain the necessary level of predictability required of
-ultra-critical systems  in fully autonomous vehicles that
-utilize learning to adapt to unpredictable environments.  As RV is applied to more complex systems, the
+system is fault-tolerant. As RV is applied to more complex systems, the
 monitors themselves will become increasingly sophisticated and as prone to error
 as the system being monitored.  Applying formal verification
 tools to the monitors to ensure they are correct can help safeguard
 that the last line of defense is actually effective.
+
+%RV may be a
+%way to regain the necessary level of predictability required of
+%ultra-critical systems  in fully autonomous vehicles that
+%utilize learning to adapt to unpredictable environments. 
+
 
  The work reported on here is part of a larger
 program aimed at creating a framework for \emph{high assurance RV}. In
