--- a/RV2015/CaseStudy.tex
+++ b/RV2015/CaseStudy.tex
@@ -16,7 +16,7 @@ spec = prop "pos" (fib > 0)
     fib = [1, 1] ++ (fib + drop 1 fib)
 \end{lstlisting}
 This  invariant property is clearly inductive and is easily
-discharged. Note that, as mentioned in Section~\ref{sec:structure}, 
+discharged. Note that, as discussed in Section~\ref{sec:structure}, 
 64-bit words are modelled by integers and eventual overflow problems are ignored here.
  
 The next example uses \texttt{copilot-kind} to prove properties
@@ -39,10 +39,9 @@ greyTick reset = a && b
     a = (not reset) && ([False] ++ not b)
     b = (not reset) && ([False] ++ a)
 \end{lstlisting}
-A quick back-of-the-envelope calculation reveals that,
-after a reset, \texttt{greyTick}'s output stream forms a cycle of
+After a reset, \texttt{greyTick}'s output stream forms a cycle of
 Boolean values with the third item in the cycle having value
-\texttt{true} and the rest being \texttt{false}.  Thus the two
+\texttt{true} and the rest being \texttt{false}.  Thus, the two
 specifications both have a cyclic structure and with a cycle that
 begins when the \texttt{reset} stream is set to \texttt{true}.  
 
@@ -63,7 +62,8 @@ spec = do
 From the above observations we 
 conjecture that given the same input stream, when \texttt{reset} is
 true,  the \texttt{intCounter} is $0$ and \texttt{greyTick} is
-\texttt{true} when \texttt{intCounter} is $2.$ We formalize these two
+\texttt{true} when \texttt{intCounter} is $2.$ (Extern streams are
+uninterpreted; see Section~\ref{sec:structure}.) We formalize these two
 properties in our framework as shown in Figure~\ref{fig:spec}.
 These predicates are discharged using the proof scheme
 \begin{lstlisting}[frame=single]
@@ -72,16 +72,20 @@ scheme = do
   check "iResetOk"
   check "eqCounters"
 \end{lstlisting}  
+
 \subsection{Boyer-Moore Majority Vote}~\label{sec:mvote}
 Earlier research on Copilot  has investigated fault-tolerant
-runtime verification~\cite{pike-isse-13}. In this work, we employed the Boyer-Moore
-Majority Vote Algorithm~\cite{MooreBoyer82,Hesselink2005} to determine
-if in a given list of votes there is a candidate that has more than
-half of the votes, and if so, of finding this candidate. The algorithm
-operates in two passes, first it chooses a candidate and the second
-pass verifies that the candidate is indeed a majority.  The algorithm
-is subtle and the desire to apply formal verification to our Copilot
-implementation helped motivate the effort described here.   
+runtime verification~\cite{pike-isse-13}. Fault-tolerant algorithms often
+include a variant of a majority vote over values (e.g., sensor values, clock
+values, etc.). The Boyer-Moore
+Majority Vote Algorithm is a linear-time voting
+algorithm~\cite{MooreBoyer82,Hesselink2005}. In this case-study, we verify the
+algorithm.
+
+The algorithm operates in two passes, first it chooses a candidate and the
+second pass verifies that the candidate is indeed a majority.  The algorithm is
+subtle and the desire to apply formal verification to our Copilot implementation
+helped motivate the effort described here.
 
 
 %\begin{figure*}[ht]
@@ -163,7 +167,7 @@ including \texttt{copilot-kind}, we use a simple trick to write
 and check this property.  If $P(n)$ is a predicate of an integer $n$,
 we have $\forall n \, . \, P(n)$ if and only if $\neg P(n)$ is
 satisfiable, where $n$ an unconstrained integer, which can be solved
-by a \textsc{smt}  solver. The corresponding copilot specification can be
+by a \textsc{smt} solver. The corresponding Copilot specification can be
 written as:
 \begin{lstlisting}[frame=single]
 okWith :: (Typed a, Eq a) => 
@@ -175,13 +179,13 @@ okWith a l maj = (a /= maj) ==> ((2 * count a l) <= length l)
 
 spec = prop "OK" (okWith (arbitraryCst "n") ss maj)
   where
-    ss = [ arbitrary ("s" ++ show i) | i <- [1..10]]
+    ss = [ arbitrary ("s" ++ show i) | i <- [1..10] ]
     maj = majorityVote
 \end{lstlisting}
 The function \texttt{arbitrary} is provided by the \texttt{copilot-kind} standard library and introduces an arbitrary stream. In the same way, \texttt{arbitraryCst} introduces a stream taking an unconstrained but constant value.
 
 Note that we prove the algorithm for a fixed number of $N$ inputs
-(here $N=10$). Therefore no induction is needed for the proof and the
+(here $N=10$). Therefore, no induction is needed for the proof and the
 invariant of the Boyer-Moore algorithm does not need to be made explicit. However, the size of the problem discharged to the \textsc{smt} solver grows in proportion to $N$.
 
 
@@ -201,13 +205,13 @@ where $l$ is the list of processed inputs, $p$ is the intermediary result and $s
 \[ \forall x. P(x, s) \,\wedge\, T\left(s, s' \right) \,\models\, \forall x. P(x, s') \]
 Sometimes, the stronger entailment 
 \[ P(x, s) \,\wedge\, T\left(s, s' \right) \,\models\, P(x, s') \]
-holds and the problem becomes tractable for the \textsc{smt} solver, by replacing a universally quantified variable by an unconstrained one. In our current example, it is not the case. 
+holds and the problem becomes tractable for the \textsc{smt} solver by replacing a universally quantified variable by an unconstrained one. In our current example, it is not the case. 
 
 
 Our solution to the problem of dealing with quantifiers is restricted to the
 case where $A$ is finite and we replace each formula of the form $\forall x \in A
 \; P(x)$ by $\bigwedge_{x \in A} P(x)$. This can be done with the help of the
-\texttt{forAllCst} function provided by the copilot-kind standard library. It is
+\texttt{forAllCst} function provided by the \texttt{copilot-kind} standard library. It is
 defined as:
 \begin{lstlisting}[frame=single, deletekeywords={conj}]
 forAllCst ::(Typed a) => 
@@ -247,8 +251,7 @@ spec = do
 scheme = assuming ["inRange"] $ check "J"
 \end{lstlisting}
 
-As the reader can see, we make the hypothesis that all the elements
+We make the hypothesis that all the elements
 manipulated by the algorithm are in the set \texttt{allowed}, which is
-finite. As this set grows, the proofs discharged to the \textsc{smt} solver
-become larger, which is why this solution
-is not scalable.
+finite. The \textsc{smt} proofs are generally exponential with respect to the number of
+variables, so this approach does not scale well.
