--- a/RV2015/Structure.tex
+++ b/RV2015/Structure.tex
@@ -64,7 +64,7 @@ The complexity of the models that are built from Copilot specifications is
 limited by the power and expressiveness of the \textsc{smt} solvers in use. For instance,
 most \textsc{smt} solvers do not handle real functions like trigonometric functions. Moreover, bounded integer arithmetic is often to be approximated by standard integer arithmetic.
 
-The {Cnub} format is aimed at approximating a copilot specification in a format relying on a simple theory including basic integer arithmetic, real arithmetic, and uninterpreted functions. The stream structure is kept from the copilot core format, but the following differences have to be emphasized:
+The {Cnub} format is aimed at approximating a Copilot specification in a format relying on a simple theory including basic integer arithmetic, real arithmetic, and uninterpreted functions. The stream structure is kept from the Copilot core format, but the following differences have to be emphasized:
 
 \begin{itemize}
 \item In contrast to the great diversity of numeric types available in Copilot, we restrain ourselves to three basic types which are handled by the \textsc{SmtLib} standard: \texttt{Bool}, \texttt{Integer}, and \texttt{Real}. Problems related to integer overflows and floating point arithmetic are ignored.
@@ -133,14 +133,14 @@ This simple example illustrates that  the construction of \textsc{SmtLib} reques
 
 \subsection{The Kind2 prover and the {TransSys} format}
 
-Recall, a state transition system is a triple $(S,I,T),$
+Recall that a state transition system is a triple $(S,I,T),$
 where $S$ is a set of states, $I \subseteq S$ is the set of initial
-states and $T \subseteq S \times S $ is a transition relation over $S$.
+states, and $T \subseteq S \times S $ is a transition relation over $S$.
 Here, a state consists of  the values of a finite set of variables, with types belonging to $\{ \texttt{Int}, \texttt{Real},  \texttt{Bool}\}$. $I$ is encoded by a logical formula whose free variables correspond to the state variables and that holds for a state $q$ if and only if $q$ is an initial state. Similarly, the transition relation is given by a formula $T$ such that $T\left[\, q, \, q' \,\right]$ holds if and only if $q \rightarrow q'$. 
 
 \medskip
 
-The {TransSys} format is a modular encoding of such a state transition system. Related variables are grouped into \textit{nodes}, each node providing a distinct namespace and expressing some constraints between its variables. A significant task of the translation process to TransSys is to flatten the copilot specification so the value of all streams at time $n$ only depends on the values of all the streams at time $n - 1$ which is not the case in the Fibonacci example shown earlier. This is done by a simple program transformation which turns
+The {TransSys} format is a modular encoding of such a state transition system. Related variables are grouped into \textit{nodes}, each node providing a distinct namespace and expressing some constraints between its variables. A significant task of the translation process to TransSys is to flatten the Copilot specification so the value of all streams at time $n$ only depends on the values of all the streams at time $n - 1$ which is not the case in the Fibonacci example shown earlier. This is done by a simple program transformation which turns
 \begin{lstlisting}
 fib = [1, 1] ++ (fib + drop 1 fib)
 \end{lstlisting}
@@ -150,7 +150,11 @@ fib0 = [1] ++ fib1
 fib1 = [1] ++ (fib1 + fib0)
 \end{lstlisting}
 
-After this, it is natural to associate a variable to each stream. Here, the variables \texttt{fib0} and \texttt{fib1} would be grouped into a single node, in order to keep some structure in the representation of the transition system\footnote{This can be important for two reasons. First, the model checker could use this structural information to optimize its search. See \emph{structural abstraction} in \cite{HagenPhD}. Then, structured transition systems are easier to read, debug and transform. }. Such a modular transition system is almost ready to be translated into the Kind2 native format. However, we first have to merge each node's pair whose components are mutually dependent as Kind2 requires a topological order on its nodes.
+After this, it is natural to associate a variable to each stream. Here, the
+variables \texttt{fib0} and \texttt{fib1} would be grouped into a single node in
+order to keep some structure in the representation of the transition
+system.\footnote{Maintaining structure is important for two reasons. First, the
+  model checker can use this structural information to optimize its search; see \emph{structural abstraction} in \cite{HagenPhD}. Second, structured transition systems are easier to read, debug, and transform.} Such a modular transition system is almost ready to be translated into the Kind2 native format. However, we first have to merge each node's pair whose components are mutually dependent as Kind2 requires a topological order on its nodes.
 
 %\section{Relevance of the \textsc{SMT}-based approach}
 %In practice, our tool turned out to be very useful for debugging purposes. Indeed, even when the property being checked is not inductive or the induction step is too hard, it is very useful to test the first entailment of the $k$-induction algorithm for small values of $k$, proving the property cannot be violated in the first $k$ time steps or displaying a counterexample trace. Many subtle bugs can be captured for reasonable values of $k$. However, this does not solve our primary issue of formal verification.
