--- a/RV2015/conclusion.tex
+++ b/RV2015/conclusion.tex
@@ -3,7 +3,7 @@
  %Ultra-Critical systems are quickly evolving in complexity, and assured
  %RV is a necessary complement to traditional assurance techniques.  
 In this paper, we have presented the development of
-\texttt{Copilot-Kind} that enhances the Copilot RV framework with an
+\texttt{copilot-kind} that enhances the Copilot RV framework with an
 integrated model-checking capability for verifying monitors and
 illustrated its applicability to verify a range of monitors.
 
@@ -13,8 +13,10 @@ too hard, it is very useful to test the first entailment of the
 $k$-induction algorithm for small values of $k$, proving the property
 cannot be violated in the first $k$ time steps or displaying a
 counterexample trace. Many subtle bugs can be captured for reasonable
-values of $k$. Yet, $k$-induction does have limitations. For instance, writing $k$-inductive
-specifications can be long and mind-twisting. Newer advances like the
+values of $k$.
+
+Yet, $k$-induction does have limitations. For instance, writing $k$-inductive
+specifications can be difficult. Newer advances like the
 \textsc{IC}3 algorithm, implemented by Kind2, are aimed at proving
 non-inductive properties by splitting it into concise and relevant
 inductive lemmas. However, our experiments showed that currently
@@ -38,15 +40,12 @@ their languages with proof engines.
 %condition.
 
 Having successfully applied our tool to rather
-sophisticated monitors,  future extensions are planned.  Given we are
+sophisticated monitors,  future extensions are planned.  Given that we are
 focused on  cyber-physical systems,  the limitations
 of  \textsc{smt}-based provers go  beyond the fact that they become prohibitively slow as the
 size of their input increases.  
-\textsc{smt}-solvers do not handle quantifiers  or special real-valued
-functions well. Indeed, some
-proofs might rely on facts like $\forall x. -1 \leq \sin x \leq 1$
-that  \textsc{smt}-solvers cannot  handle unless they are hard-wired in
-a supported theory. A promising way to deal with both these issues
+\textsc{smt}-solvers do not generally handle quantifiers  or special real-valued
+functions well. A promising way to deal with both these issues
 would be an extension of the \textit{proof scheme} system where
 properties involving arbitrary streams are seen as universally
 quantified lemmas which can be specialized and added to the proof
