fixed typos found by chair of conference

--- a/RV2015/Background.tex
+++ b/RV2015/Background.tex
@@ -1,11 +1,11 @@
-\section{Background on SMT-based $k-$induction}~\label{sec:background} 
+\section{Background on SMT-based $k$-induction}~\label{sec:background} 
 The focus of our  investigation has  been on applying model checking to  prove
 invariant properties of our monitors.   We  
-employ a  technique known as $k-$induction~\cite{Sheeran00,EenS03} for verifying inductive
-properties of infinite state systems.   $k-$induction  has the
+employ a  technique known as $k$-induction~\cite{Sheeran00,EenS03} for verifying inductive
+properties of infinite state systems.   $k$-induction  has the
 advantage that it is well suited  to  \textsc{smt} 
 based bounded model checking. This section profiles the
-basic concepts of the  $k-$induction proof technique needed in the
+basic concepts of the  $k$-induction proof technique needed in the
 remainder of the paper. In practice, we use tools that implement  enhancements of the basic procedure such as path compression~\cite{dMRS03} that help the process scale, but are beyond the focus of the paper. 
 
 Consider  a state transition system  $(S,I,T),$
