--- a/GAJaloyan/sample_report/ref.bib
+++ b/GAJaloyan/sample_report/ref.bib
@@ -129,3 +129,16 @@ language={English}
  address = {New York, NY, USA},
  keywords = {automated testing, compiler defect, compiler testing, random program generation, random testing},
 } 
+
+
+@techreport{MBNMH2010NASA,
+ author = {C\'esar Mu{\~{n}}oz and Ricky Butler and Anthony Narkawicz and Jeffrey Maddalon and George Hagen},
+ title = {A Criteria Standard for Conflict Resolution: A Vision for Guaranteeing the Safety of Self-Separation in
+{N}ext{G}en},
+ institution =  "NASA",
+ month = "October",
+ year  = "2010",
+ type  = "Technical Memorandum",
+ number = "NASA/TM-2010-216862",
+ address = "Langley Research Center, Hampton VA 23681-2199, USA"
+}
