--- a/GAJaloyan/sample_report/rapport.tex
+++ b/GAJaloyan/sample_report/rapport.tex
@@ -3,6 +3,9 @@
 \usepackage[cm]{fullpage}
 \usepackage{cite}
 \usepackage[cmex10]{amsmath}
+\usepackage{pgf}
+\usepackage{tikz}
+\usetikzlibrary{arrows,automata}
 %\usepackage{amsmath}
 \usepackage{array}
 \usepackage{bcprules}
@@ -233,9 +236,49 @@
   \subsection{Copilot toolchain}
   
   Copilot is first reified using standard observation techniques\footnote{These techniques can be found in \cite{Copilot06}}. In its reified form, it can either be interpreted, printed or compiler, using two different back-ends, the first one using Atom, the second one SBV. Both compilers generate C-code, which can be afterwards compared to each other, to ensure that both are semantically equivalent, using model checking techniques\footnote{Namely Kind}. The Figure~\ref{fig:Copilot backend} shows a global view of the different tools used in Copilot.
-  \begin{figure}[t]
+  \begin{figure}[ht!]
   	\centering
-  	\includegraphics[height=90mm,page=1]{Papiers/schema.pdf}
+  	\begin{tikzpicture}[->, node distance=3cm, auto, shorten >=1pt, bend angle=45,
+  	thick]
+  	\tikzstyle{every state}=[rectangle, rounded corners]
+  	
+  	
+  	\node[state] (Int) {Interpreter};
+  	\node[state] (Lang) [above right of=Int]
+  	{
+  		\begin{tabular}[b]{l}
+  		Copilot Libraries\\ \hline Copilot Language
+  		\end{tabular}};
+  	\node[state] (Core) [below right of=Lang] {Copilot Core};
+  	\node[state] (PP) [right of=Core] {Pretty Printer};
+  	
+  	
+  	\node[state] (Atom) [below left of=Core] {Atom Back-End};
+  	\node[state] (SBV) [below right of=Core] {SBV Back-End};
+  	\node[state] (C99A) [below of=Atom] {C99};
+  	\node[state] (C99S) [below of=SBV] {C99};
+  	
+  	
+  	\tikzstyle{every node}=[]
+  	
+  	
+  	\path %% (Libs) edge node {0,1,L} (Lang);
+  	%% edge node {1,1,R} (C)
+  	(Lang) edge [bend left, anchor=west, text width=2.5cm] node {Reification and DSL-specific type-checking} (Core)
+  	%% edge node {0,1,L} (C)
+  	(Core) edge node {Translation} (Atom)
+  	edge node {} (SBV)
+  	edge node {} (PP)
+  	edge node [swap] {Evaluation} (Int)
+  	(Int) edge [<->, bend right] node {QuickCheck} (Atom)
+  	(Atom) edge node {Compilation} (C99A)
+  	(SBV) edge node {Compilation} (C99S)
+  	(C99A) edge [<->] node {Model checking} (C99S);
+  	%% edge [bend left] node {Translation} (SBV)
+  	%% (Atom) edge [loop below] node {1,1,R} (D)
+  	%% edge node {0,1,R} (Libs)
+  	%% (SBV) edge [bend left] node {1,0,R} ();
+  	\end{tikzpicture}
   	\caption{The Copilot toolchain\cite{Copilot03}}
   	\label{fig:Copilot backend}
   \end{figure}
